--- a/templates/keenetic/keenetic_routers_edit_data.html
+++ b/templates/keenetic/keenetic_routers_edit_data.html
@@ -19,6 +19,7 @@
   <td><b><a href="?data_source=&view_mode=edit_keenetic_routers&id=<#ID#>&tab=data&sortby=IP">IP</a><br></td>
   <td><b><a href="?data_source=&view_mode=edit_keenetic_routers&id=<#ID#>&tab=data&sortby=STATUS">Статус</a><br></td>
   <td><b><a href="?data_source=&view_mode=edit_keenetic_routers&id=<#ID#>&tab=data&sortby=TYPE_CONNECT">Подключение</a><br></td>
+  <td><b><a href="?data_source=&view_mode=edit_keenetic_routers&id=<#ID#>&tab=data&sortby=REGISTERED">Регистрация</a><br></td>
   <td><b><#LANG_LINKED_OBJECT#><br></td>
   <td><b><#LANG_LINKED_PROPERTY#><br></td>
   <td><b><#LANG_METHOD#><br></td>
@@ -34,19 +35,22 @@
   [#endif TITLE#]
   <td valign="top">[#MAC#]</td>
   <td valign="top">[#IP#]</td>
-  <td>[#if STATUS==1#]<span class="label label-success" title="Статус устройства">ONLINE</span>
+  <td class="text-center">[#if STATUS==1#]<span class="label label-success" title="Статус устройства">ONLINE</span>
 		[#else#]<span class="label label-danger" title="Статус устройства">OFFLINE</span>
 		[#endif STATUS#]</td>
-  <td valign="top">[#if TYPE_CONNECT==0#]<span><b>LAN</b></span>
+  <td valign="top" class="text-center">[#if TYPE_CONNECT==0#]<span><b>LAN</b></span>
 		[#else#]<span><b>Wi-Fi</b></span>
-		[#endif TYPE_CONNECT#]</td></td>
+		[#endif TYPE_CONNECT#]</td>
+  <td valign="top" class="text-center">[#if REGISTERED==0#]<a href="?id=<#ID#>&tab=<#TAB#>&view_mode=<#VIEW_MODE#>&register_id=[#ID#]" onClick="return confirm('Зарегистрировать устройство на роутере?');" class="label label-warning"><b>&nbsp;</b></a>
+		[#else#]<span class="label label-success">&nbsp;</span>
+		[#endif REGISTERED#]</td>
   <td valign="top"><input type="text" name="linked_object[#ID#]" id="linked_object[#ID#]" value="[#LINKED_OBJECT#]"></td>
   <td valign="top"><input type="text" name="linked_property[#ID#]" id="linked_property[#ID#]" value="[#LINKED_PROPERTY#]"></td>
   <td valign="top"><input type="text" name="linked_method[#ID#]" id="linked_method[#ID#]" value="[#LINKED_METHOD#]"></td>
   [#module name="linkedobject" object_field="linked_object<#PROPERTIES.ID#>" property_field="linked_property<#PROPERTIES.ID#>" method_field="linked_method<#PROPERTIES.ID#>" width="200"#]
   <td valign="top">[#UPDATED#]</td>
   <td><a href="?data_source=<#DATA_SOURCE#>&view_mode=info_keenetic_devices&id=[#ID#]" class="btn btn-default" title="Информация об устройстве"><i class="glyphicon glyphicon-info-sign"></i></a>
-   <a href="?id=<#ID#>&tab=<#TAB#>&view_mode=<#VIEW_MODE#>&delete_id=[#ID#]" onClick="return confirm('<#LANG_ARE_YOU_SURE#>');" class="btn btn-default"><i class="glyphicon glyphicon-remove"></i></td>
+   [#if TITLE!='Интернет'#]<a href="?id=<#ID#>&tab=<#TAB#>&view_mode=<#VIEW_MODE#>&delete_id=[#ID#]" onClick="return confirm('<#LANG_ARE_YOU_SURE#>');" class="btn btn-default"><i class="glyphicon glyphicon-remove"></i>[#endif TITLE#]</td>
  </tr>
  [#end PROPERTIES#]
 </table> 
