--- a/templates/keenetic/keenetic_routers_edit_data.html
+++ b/templates/keenetic/keenetic_routers_edit_data.html
@@ -18,8 +18,8 @@
   <td><b><a href="?data_source=&view_mode=edit_keenetic_routers&id=<#ID#>&tab=data&sortby=MAC">MAC</a><br></td>
   <td><b><a href="?data_source=&view_mode=edit_keenetic_routers&id=<#ID#>&tab=data&sortby=IP">IP</a><br></td>
   <td><b><a href="?data_source=&view_mode=edit_keenetic_routers&id=<#ID#>&tab=data&sortby=STATUS">Статус</a><br></td>
-  <td><b><a href="?data_source=&view_mode=edit_keenetic_routers&id=<#ID#>&tab=data&sortby=TYPE_CONNECT">Подключение</a><br></td>
-  <td><b><a href="?data_source=&view_mode=edit_keenetic_routers&id=<#ID#>&tab=data&sortby=REGISTERED">Регистрация</a><br></td>
+  <td><b><a href="?data_source=&view_mode=edit_keenetic_routers&id=<#ID#>&tab=data&sortby=TYPE_CONNECT">&nbsp;Тип&nbsp;</a><br></td>
+  <td><b><a href="?data_source=&view_mode=edit_keenetic_routers&id=<#ID#>&tab=data&sortby=REGISTERED" title="Статус регистрации устройства на роутере">Рег</a><br></td>
   <td><b><#LANG_LINKED_OBJECT#><br></td>
   <td><b><#LANG_LINKED_PROPERTY#><br></td>
   <td><b><#LANG_METHOD#><br></td>
@@ -41,8 +41,8 @@
   <td valign="top" class="text-center">[#if TYPE_CONNECT==0#]<span><b>LAN</b></span>
 		[#else#]<span><b>Wi-Fi</b></span>
 		[#endif TYPE_CONNECT#]</td>
-  <td valign="top" class="text-center">[#if REGISTERED==0#]<a href="?id=<#ID#>&tab=<#TAB#>&view_mode=<#VIEW_MODE#>&register_id=[#ID#]" onClick="return confirm('Зарегистрировать устройство на роутере?');" class="label label-warning"><b>&nbsp;</b></a>
-		[#else#]<span class="label label-success">&nbsp;</span>
+  <td valign="top" class="text-center">[#if REGISTERED==0#]<a href="?id=<#ID#>&tab=<#TAB#>&view_mode=<#VIEW_MODE#>&register_id=[#ID#]" onClick="return confirm('Зарегистрировать устройство на роутере?');" class="label label-warning" title="Устройство не зарегистрировано"><b>&nbsp;</b></a>
+		[#else#]<span class="label label-success" title="Устройство зарегистрировано">&nbsp;</span>
 		[#endif REGISTERED#]</td>
   <td valign="top"><input type="text" name="linked_object[#ID#]" id="linked_object[#ID#]" value="[#LINKED_OBJECT#]"></td>
   <td valign="top"><input type="text" name="linked_property[#ID#]" id="linked_property[#ID#]" value="[#LINKED_PROPERTY#]"></td>
