- Добавлена справка; - Добавлена возможность для каждого устройства написать скрипт, который будет вызываться при изменении статуса устройства с возможностью использования расширенной информации. Подробнее в справке к модулю; - Изменен алгоритм получения информации об обновлениях прошивки. Ранее этот процесс мог "подвешивать" всю систему в начале каждого часа; - Исправление ошибок.

--- a/templates/keenetic/action_admin.html
+++ b/templates/keenetic/action_admin.html
@@ -49,6 +49,10 @@
  [#endif VIEW_MODE#]
  <!-- / table keenetic_routers search -->
  
+  <!--# Справка по модулю. #-->
+[#if VIEW_MODE="show_help"#]
+   [#inc ./help_ru.html#] 
+[#endif#]
   <!--# Информация об устройстве #-->
 [#if VIEW_MODE="info_keenetic_devices"#]
    [#inc keenetic_devices_dev_info.html#] 
