--- a/templates/keenetic/help_ru.html
+++ b/templates/keenetic/help_ru.html
@@ -116,6 +116,18 @@
          </div>
       </div>
    </div>
+      <div class="panel panel-info">
+      <div class="panel-heading">
+         <a data-toggle="collapse" data-parent="#accordion" href="#dns_help">Управление DNS</a>
+      </div>
+      <div class="panel-body collapse" id="dns_help">
+        <div style="width:900px">
+		  <p>Используется для назначения IP адресам доменных имен.</p>
+		   <p>В связи с тем, что настройка данного функционала имеется только в командной строке, решил вывести данный функционал в модуль.</p>
+		  <p>Работает <strong>только внутри</strong> локальной сети.</p>
+		</div>
+      </div>
+   </div>
 </div>
 <br>
 <div>
