- Добавлена возможность "отслеживания" устройств, подключенных к роутеру.

--- a/templates/keenetic/help_ru.html
+++ b/templates/keenetic/help_ru.html
@@ -17,6 +17,7 @@
             <li>определение доступности подключенных к роутеру устройств</li>
 			<li>просмотр информации о подключенном устройстве</li>
 			<li>выполнение произвольного кода при изменении статуса подключенного устройства</li>
+			<li>возможность включения "отслежвания" параметров устройства через автосоздаваемый класс</li>
             </ul>
 			<p>Для взаимодействия с роутером используется REST API (/rci). Попробовать можно по адресу http://IP_роутера/a.</p>
            	<p>В модуле имеется цикл, который раз в указанное пользователем количество секунд опрашивает роутер, чтобы получить информацию о подключенных устройствах, сетях и пр.</p>
@@ -24,6 +25,40 @@
 			Здесь же сразу можно установить количество секунд, через которое модуль будет отправлять роутеру команду перезагрузки после исчезновения доступа в интернет. 0 - не перезагружать</p>
 			<p>В настройках (значок шестеренки) можно установить период опроса роутера (по умолчанию 5 секунд) и включить отладку DebMes</p>
          </div>
+      </div>
+   </div>
+   <div class="panel panel-info">
+      <div class="panel-heading">
+         <a data-toggle="collapse" data-parent="#accordion" href="#class_help">Класс для "отслеживания"</a>
+      </div>
+      <div class="panel-body collapse" id="class_help">
+        <div style="width:900px">
+		  <p>При установке модуль создает в Объектах свой класс Keenetic с свойствами и методом. В свою очередь, в классе Keenetic, при добавлении роутеров, создаются подклассы с их наименованием.</p>
+		  <p>В информации об устройстве показывается статус отслеживания (по умолчанию выключен) и присутствует кнопка для его включения/выключения.</p>
+		  <p>При включении "отслеживания" в классе с именем роутера создается объект с именем устройства и при каждом проходе цикла запускается метод объекта и передается информация для заполняются свойств объекта.</p>
+		  <p>При отключении "отслеживания" объект с именем устройства удаляются.</p>
+		  <p><strong>ВНИМАНИЕ!</strong> При включении "отслеживания" при каждом проходе цикла в базу происходит запись <strong>8</strong> свойств. И так на <strong>каждое</strong> отслеживаемое устройство.</p>
+		  <strong>Свойства класса</strong><br>
+		  <b>uptime</b> - время в сети (сек.);<br>
+		  <b>rxbytes</b> - принято байт;<br>
+		  <b>txbytes</b> - отправлено байт;<br>
+		  <b>router</b> - к какому роутеру подключено устройство;<br>
+		  <b>net</b> - SSID сети;<br>
+		  <b>frequency</b> - 2.4 или 5 Ггц;<br>
+		  <b>mode</b> - режим подключения;<br>
+		  <b>rssi</b> - мощность сигнала.<br>
+		  <br>
+		  <strong>Метод класса track</strong><br>
+		  <i>$this->setProperty("uptime", $params["UPTIME"]);<br>
+		  $this->setProperty("rxbytes", $params["RXBYTES"]);<br>
+		  $this->setProperty("txbytes", $params["TXBYTES"]);<br>
+		  $this->setProperty("router", $params["ROUTER"]);<br>
+		  $this->setProperty("net", $params["NET"]);<br>
+		  $this->setProperty("frequency", $params["FREQ"]);<br>
+		  $this->setProperty("mode", $params["WIFI_MODE"]);<br>
+		  $this->setProperty("rssi", $params["RSSI"]);<br></i>
+		  <p>Метод принимает данные из цикла и раскладывает их по свойствам. Можно отключить выполнение данного метода ("Вызывать родительский метод - никогда" в Объектах системы) и, опираясь на него, написать свой. Это сократит количество записей в базу.</p>
+		</div>
       </div>
    </div>
    <div class="panel panel-info">
