--- a/templates/keenetic/keenetic_routers_search_admin.html
+++ b/templates/keenetic/keenetic_routers_search_admin.html
@@ -39,11 +39,11 @@
  <td>[#ADDRESS#]</td>
  <td>[#MODEL#]</td>
  <td>[#if UPDATE!=""#]<span class="label label-danger" title="Есть обновление">[#FIRMWARE#]</span>[#else#][#FIRMWARE#][#endif#]</td>
- <td>[#if STATUS==1#]<span class="label label-success" title="Статус приложения">ONLINE</span>
-	[#else#]<span class="label label-danger" title="Статус приложения">OFFLINE</span>
+ <td>[#if STATUS==1#]<span class="label label-success" title="Статус соединения с роутеро">ONLINE</span>
+	[#else#]<span class="label label-danger" title="Статус соединения с роутером">OFFLINE</span>
 	[#endif STATUS#]</td>
- <td>[#if INET_STATUS==1#]<span class="label label-success" title="Статус приложения">ONLINE</span>
-	[#else#]<span class="label label-danger" title="Статус приложения">OFFLINE</span>
+ <td>[#if INET_STATUS==1#]<span class="label label-success" title="Статус соединения с Интернет">ONLINE</span>
+	[#else#]<span class="label label-danger" title="Статус соединения с Интернет">OFFLINE</span>
 	[#endif INET_STATUS#]</td>
  <td width="1%" nowrap>
   <div>
