--- a/templates/keenetic/keenetic_routers_edit_dns.html
+++ b/templates/keenetic/keenetic_routers_edit_dns.html
@@ -10,7 +10,7 @@
 <legend><#LANG_NEW_RECORD#></legend>
 [#endif ID#]
 <div class="form-group col-lg-4">
-<div>
+<div class="table-responsive">
 <table class="table table-striped">
 [#if DNS!=""#]
  <tr>
@@ -57,7 +57,7 @@
 <input type="hidden" name="mode" value="update">
 <input type="hidden" name="data_source" value="<#DATA_SOURCE#>">
 <input type="hidden" name="tab" value="<#TAB#>">
-        </div>
+ </div>
 </div>
 </fieldset>
 </form>
