--- a/templates/keenetic/keenetic_routers_search_admin.html
+++ b/templates/keenetic/keenetic_routers_search_admin.html
@@ -24,6 +24,7 @@
 <table  align=center class="table table-striped">
 <thead>
 <tr>
+<div class="table-responsive">
 <th><#LANG_TITLE#></th>
 <th>Адрес</th>
 <th>Модель</th>
@@ -56,6 +57,7 @@
 </tr>
 [#end RESULT#]
 </tbody>
+</div>
 </table>
 <input type="hidden" name="data_source" value="<#DATA_SOURCE#>">
 <input type="hidden" name="view_mode" value="multiple_keenetic_routers">
