--- a/templates/keenetic/help_ru.html
+++ b/templates/keenetic/help_ru.html
@@ -167,10 +167,15 @@
 			<p>Команды отправляются в виде JSON объекта, содержащего команду, соответственно справочнику cli роутеров Keenetic. Например, команда "show ip hotspot" будет выглядеть следующим образом: "{"show": {"ip": {"hotspot": {}}}}"</p>
 			<p>Команды удобно тестировать в веб-интерфейсе Кинетика по адресу http://IP_роутера/a</p>
 			<br>
-			<p>Также можно <b>перезагружать</b> роутер с помощью следующего кода:</p>
+			<p>Можно <b>перезагружать</b> роутер с помощью следующего кода:</p>
 			<i>include_once(DIR_MODULES . "keenetic/keenetic.class.php");<br>
 			$keenetic_module = new keenetic();<br>
 			$keenetic_module->reboot('IP роутера')<br>
+			</i><br>
+			<p>Также можно <b>отправлять "магический" пакет</b> для включения устройств с помощью wake-on-lan:</p>
+			<i>include_once(DIR_MODULES . "keenetic/keenetic.class.php");<br>
+			$keenetic_module = new keenetic();<br>
+			$keenetic_module->wol('IP роутера', 'mac устройства')<br>
 			</i><br>
 		</div>
       </div>
