--- a/templates/keenetic/keenetic_routers_search_admin.html
+++ b/templates/keenetic/keenetic_routers_search_admin.html
@@ -37,7 +37,7 @@
 [#begin RESULT#]
 <tr>
  <td>[#TITLE#]</td>
- <td>[#ADDRESS#]</td>
+ <td><a href="http://[#ADDRESS#]" target="_blank">[#ADDRESS#]</a></td>
  <td>[#MODEL#]</td>
  <td>[#if UPDATE!=""#]<span class="label label-danger" title="Есть обновление">[#FIRMWARE#]</span>[#else#][#FIRMWARE#][#endif#]</td>
  <td>[#if STATUS==1#]<span class="label label-success" title="Устройство доступно">ONLINE</span>
