-Добавлено определение активного соединения с интернетом (основное/резервное). Можно использовать, например, для отключения закачки торрентов при резервном подключении и повторной активации закачки при восстановлении основного подключения.

--- a/templates/keenetic/help_ru.html
+++ b/templates/keenetic/help_ru.html
@@ -18,6 +18,7 @@
 			<li>просмотр информации о подключенном устройстве</li>
 			<li>выполнение произвольного кода при изменении статуса подключенного устройства</li>
 			<li>возможность включения "отслежвания" параметров устройства через автосоздаваемый класс</li>
+			<li>определение активного на данный момент подключения к интернету (основное/резервное)</li>
             </ul>
 			<p>Для взаимодействия с роутером используется REST API (/rci). Попробовать можно по адресу http://IP_роутера/a.</p>
            	<p>В модуле имеется цикл, который раз в указанное пользователем количество секунд опрашивает роутер, чтобы получить информацию о подключенных устройствах, сетях и пр.</p>
@@ -35,7 +36,7 @@
         <div style="width:900px">
 		  <p>При установке модуль создает в Объектах свой класс Keenetic с свойствами и методом. В свою очередь, в классе Keenetic, при добавлении роутеров, создаются подклассы с их наименованием.</p>
 		  <p>В информации об устройстве показывается статус отслеживания (по умолчанию выключен) и присутствует кнопка для его включения/выключения.</p>
-		  <p>При включении "отслеживания" в классе с именем роутера создается объект с именем устройства и при каждом проходе цикла запускается метод объекта и передается информация для заполняются свойств объекта.</p>
+		  <p>При включении "отслеживания" в классе с именем роутера создается объект с именем устройства и при каждом проходе цикла запускается метод объекта и передается информация для заполнения свойств объекта.</p>
 		  <p>При отключении "отслеживания" объект с именем устройства удаляются.</p>
 		  <p><strong>ВНИМАНИЕ!</strong> При включении "отслеживания" при каждом проходе цикла в базу происходит запись <strong>8</strong> свойств. И так на <strong>каждое</strong> отслеживаемое устройство.</p>
 		  <strong>Свойства класса</strong><br>
@@ -58,6 +59,23 @@
 		  $this->setProperty("mode", $params["WIFI_MODE"]);<br>
 		  $this->setProperty("rssi", $params["RSSI"]);<br></i>
 		  <p>Метод принимает данные из цикла и раскладывает их по свойствам. Можно отключить выполнение данного метода ("Вызывать родительский метод - никогда" в Объектах системы) и, опираясь на него, написать свой. Это сократит количество записей в базу.</p>
+		</div>
+      </div>
+   </div>
+   <div class="panel panel-info">
+      <div class="panel-heading">
+         <a data-toggle="collapse" data-parent="#accordion" href="#inet_help">Статусы подключения к сети Интернет</a>
+      </div>
+      <div class="panel-body collapse" id="inet_help">
+        <div style="width:900px">
+			В устройстве <strong>"Интернет"</strong>, возможны следующие статусы: 
+			<ul>
+            <li><strong>0</strong> - интернет отсутствует.</li>
+            <li><strong>1</strong> - доступ в интернет есть, активно основное подключение.</li>
+            <li><strong>2</strong> - доступ в интернет есть, активно резервное подключение 1.</li>
+			<li><strong>3</strong> - доступ в интернет есть, активно резервное подключение 2.</li>
+			<li><strong>4</strong> - доступ в интернет есть, активно резервное подключение 3.</li>
+            </ul>
 		</div>
       </div>
    </div>
