--- a/templates/keenetic/keenetic_devices_dev_info.html
+++ b/templates/keenetic/keenetic_devices_dev_info.html
@@ -1,22 +1,25 @@
 <!-- Информация об устройстве -->
-		[#if ERR_CODE#]
-		  <div class="alert alert-danger"><#LANG_FILLOUT_REQURED#></div> 
-		  <script>
-			$(window).load(function() {
-				[#if SETTINGS_CODEEDITOR_SHOWERROR == '1' AND SETTINGS_CODEEDITOR_TURNONSETTINGS == '1'#]
-					find = $('div pre.CodeMirror-line:eq([#ERR_LINE#])');
-					find.attr('id', 'errorline_[#ERR_LINE#]');
-				
-					var newElems = $("<div class='hintError' style='border-top: 1px solid red;font-weight: bold;font-style: italic;'><#LANG_STRING_ERROR#> -> [#ERRORS#]</div>");
-					$('div pre.CodeMirror-line:eq([#ERR_LINE#])').append(newElems);
-				[#endif#]
-				
-				[#if SETTINGS_CODEEDITOR_UPTOLINE == '1' AND SETTINGS_CODEEDITOR_TURNONSETTINGS == '1'#]
-					location.href='#errorline_[#ERR_LINE#]';
-				[#endif#]				
-			});
-			</script>
-		[#endif ERR#]
+[#if ERR#]
+<div class="alert alert-danger">[#ERR_ALERT#]</div>
+[#endif ERR#]
+[#if ERR_CODE#]
+  <div class="alert alert-danger"><#LANG_FILLOUT_REQURED#></div> 
+  <script>
+	$(window).load(function() {
+		[#if SETTINGS_CODEEDITOR_SHOWERROR == '1' AND SETTINGS_CODEEDITOR_TURNONSETTINGS == '1'#]
+			find = $('div pre.CodeMirror-line:eq([#ERR_LINE#])');
+			find.attr('id', 'errorline_[#ERR_LINE#]');
+		
+			var newElems = $("<div class='hintError' style='border-top: 1px solid red;font-weight: bold;font-style: italic;'><#LANG_STRING_ERROR#> -> [#ERRORS#]</div>");
+			$('div pre.CodeMirror-line:eq([#ERR_LINE#])').append(newElems);
+		[#endif#]
+		
+		[#if SETTINGS_CODEEDITOR_UPTOLINE == '1' AND SETTINGS_CODEEDITOR_TURNONSETTINGS == '1'#]
+			location.href='#errorline_[#ERR_LINE#]';
+		[#endif#]				
+	});
+	</script>
+[#endif ERR#]
 <div>
 <a href="?data_source=<#DATA_SOURCE#>&view_mode=edit_keenetic_routers&id=<#ROUTER_ID#>&tab=data"class="btn btn-default "><i class="glyphicon glyphicon-backward"></i> Назад</a>
 <br>
