--- a/templates/keenetic/keenetic_routers_edit_dns.html
+++ b/templates/keenetic/keenetic_routers_edit_dns.html
@@ -37,10 +37,8 @@
   <th>&nbsp;</th>
  </tr>
  <tr>
-  <td>
-   <input type="text" name="title_new" value="">
-  </td>
-   <td><input type="text" name="ip_new" value=""></td>
+  <td><input class="form-control" type="text" name="title_new" value=""></td>
+   <td><input class="form-control" type="text" name="ip_new" value=""></td>
    <td>&nbsp;</td>
  </tr>
 </table> 
