--- a/templates/keenetic/help_ru.html
+++ b/templates/keenetic/help_ru.html
@@ -22,9 +22,9 @@
             </ul>
 			<p>Для взаимодействия с роутером используется REST API (/rci). Попробовать можно по адресу http://IP_роутера/a.</p>
            	<p>В модуле имеется цикл, который раз в указанное пользователем количество секунд опрашивает роутер, чтобы получить информацию о подключенных устройствах, сетях и пр.</p>
-            <p>Для добавления интернет-центра нажмите кнопку +Добавить, придумайте название роутера, введите IP адрес или KeenDNS имя, имя пользователя и пароль. После нажатия кнопки Добавить модуль подключится к роутеру и он появится в списке доступных устройств.
+            <p>Для добавления интернет-центра нажмите кнопку +Добавить, придумайте название роутера, введите IP адрес или KeenDNS имя, имя пользователя и пароль. Можно сразу изменить период опроса роутера в секундах (по умолчанию 5). После нажатия кнопки Добавить модуль подключится к роутеру и он появится в списке доступных устройств.
 			Здесь же сразу можно установить количество секунд, через которое модуль будет отправлять роутеру команду перезагрузки после исчезновения доступа в интернет. 0 - не перезагружать</p>
-			<p>В настройках (значок шестеренки) можно установить период опроса роутера (по умолчанию 5 секунд) и включить отладку DebMes</p>
+			<p>В настройках (значок шестеренки) включить отладку DebMes</p>
          </div>
       </div>
    </div>
