--- a/templates/keenetic/keenetic_routers_search_admin.html
+++ b/templates/keenetic/keenetic_routers_search_admin.html
@@ -29,6 +29,7 @@
 <th>Адрес</th>
 <th>Модель</th>
 <th>Прошивка</th>
+<th>Опрос</th>
 <th>Статус</th>
 <th>Интернет</th>
 </tr>
@@ -40,6 +41,7 @@
  <td><a href="http://[#ADDRESS#]" target="_blank">[#ADDRESS#]</a></td>
  <td>[#MODEL#]</td>
  <td>[#if UPDATE!=""#]<span class="label label-danger" title="Есть обновление">[#FIRMWARE#]</span>[#else#][#FIRMWARE#][#endif#]</td>
+ <td>[#REQ_PERIOD#]</td>
  <td>[#if STATUS==1#]<span class="label label-success" title="Устройство доступно">ONLINE</span>
 	[#else#]<span class="label label-danger" title="Устройство недоступно">OFFLINE</span>
 	[#endif STATUS#]</td>
