--- a/templates/keenetic/action_admin.html
+++ b/templates/keenetic/action_admin.html
@@ -70,9 +70,12 @@
   <li[#if TAB="data"#] class="active"[#endif#]>
    <a href="?data_source=<#DATA_SOURCE#>&view_mode=<#VIEW_MODE#>&id=<#ID#>&tab=data">Устройства</a>
   </li>
-    <li[#if TAB="dns"#] class="active"[#endif#]>
+  <li[#if TAB="dns"#] class="active"[#endif#]>
    <a href="?data_source=<#DATA_SOURCE#>&view_mode=<#VIEW_MODE#>&id=<#ID#>&tab=dns">Управление DNS</a>
   </li>
+  <li[#if TAB="api"#] class="active"[#endif#]>
+    <a href="?data_source=<#DATA_SOURCE#>&view_mode=<#VIEW_MODE#>&id=<#ID#>&tab=api">API</a>
+    </li>
 </ul>
 &nbsp;<br/>
    [#endif ID#]
@@ -84,6 +87,9 @@
    [#endif TAB#]
    [#if TAB="dns"#]
     [#inc keenetic_routers_edit_dns.html#]
+   [#endif TAB#]
+   [#if TAB="api"#]
+    [#inc keenetic_routers_edit_api.html#]
    [#endif TAB#]
  [#endif VIEW_MODE#]
  <!-- / table keenetic_routers edit -->
